modified _config and fauicon

--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ permalink: /:year/:month/:day/:title/
 #facebook_username: gaohaoyang.water
 github_username:  wuxinyou
 email: 15216111683@163.com
-weibo_username: wuxypapa
-zhihu_username: wuxy
+weibo_username: wuxyPapa
+zhihu_username: wu-xin-you-78
 #linkedIn_username: 
 dribbble_username:
 
