--- a/_config.yml
+++ b/_config.yml
@@ -20,10 +20,10 @@ github_username:  wuxinyou
 email: 15216111683@163.com
 weibo_username: wuxyPapa
 zhihu_username: wu-xin-you-78
-#linkedIn_username: 
+#linkedIn_username:
 dribbble_username:
 
-description_footer: 本站记录我的生活！
+description_footer: 本站作为我的技术博客！
 
 # comments
 # two ways to comment, only choose one, and use your own short name
